# caged-processing-task

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  SPEC.md  debug_ecs_task.py  pyproject.toml
.github/workflows/: deploy.yml
config/: ruff.toml
sample/: CAGEDEXC.csv  CAGEDFOR.csv  CAGEDMOV.csv  caged_cbo_lookup.json  caged_cnae_lookup.json  caged_geo_lookup.json  files_by_month.json  received_payload.json
sample/caged_files/: CAGEDEXC202601.txt  CAGEDEXC202602.txt  CAGEDFOR202601.txt  CAGEDFOR202602.txt  CAGEDMOV202601.txt  CAGEDMOV202602.txt
sample/order_independence/: README.md  processing_job_202601.json  processing_job_202602.json  registry_values_202601.json  registry_values_202602.json
src/app/: __init__.py  __main__.py  cli.py  exceptions.py  processor.py  service.py  settings.py
src/app/models/: __init__.py  downloaded_file.py  processing_job.py  processing_month.py  processing_result.py
tests/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_models.py  test_processor.py  test_service.py
